# example-nnp-seccomp-caps

./: CMakeLists.txt  amb_exec.c  bindcap.c  build.sh  common.h  nocap_exec.c  probe_uname.c  readme.md  run.sh  sc_demo.c  sc_demo_exec.c  sc_stack2.c  test.sh
